--- a/.local.env
+++ b/.local.env
@@ -1,5 +1,5 @@
 # API KEYS FOR FIREBASE
-NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyBCpXNOL5O0UDYrHPe6uov6diqQalZIwL4
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyBCpXNOL5O0UDYrHPe6uov6diqQalZIwL4"
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=communication-app-7fefb.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=communication-app-7fefb
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=communication-app-7fefb.firebasestorage.app
